@@ -35,7 +35,7 @@
     </td>
     <td><%= comment.description %></td>
     <td style="vertical-align:middle">
-      <% if current_user.all_comments.include?(comment) %>
+      <% if current_user.all_deletable_comments.include?(comment) %>
         <%= link_to image_tag('contour/delete.png', :alt => ''), comment, :confirm => "Are you sure you want to delete Comment #{comment.name}?", :method => :delete %>
       <% end %>
     </td>
